# sparrow-ipc

./: CMakeLists.txt
cmake/: external_dependencies.cmake
include/: serialize_null_array.hpp
src/: serialize.cpp
tests/: CMakeLists.txt
